--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -1,13 +1,25 @@
+#app {
+    display: flex;
+    max-width: 1100px;
+    margin: 100px auto;
+    justify-content: space-between;
+}
+
 .list {
     background: #eee;
-    max-width: 500px;
-    margin: auto;
+    width: 500px;
+    height: 600px;
     padding: 10px;
+    position: relative;
 }
 
 .item {
     padding: 20px;
+    width: 480px;
+    height: 60px;
     background: orange;
     margin: 10px 0;
     cursor: pointer;
+    position: absolute;
+    z-index: 1;
 }
