--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -1,4 +1,4 @@
-#app {
+#list-container {
     display: flex;
     max-width: 1100px;
     margin: 100px auto;
@@ -11,17 +11,4 @@
     height: 600px;
     padding: 10px;
     overflow: auto;
-}
-
-.item {
-    padding: 20px;
-    height: 60px;
-    background: orange;
-    margin: 10px 0;
-    cursor: pointer;
-    transition: transform 200ms ease-in;
-}
-
-.item--over {
-    transform: scale(0.9);
 }
