--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,9 +1,15 @@
 html, body {
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Helvetica", sans-serif;
+
 }
 
 * {
     box-sizing: border-box;
+}
+
+.container {
+    max-width: 1300px;
+    margin: 0 auto;
 }
