--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,8 +1,8 @@
 html, body {
     padding: 0;
     margin: 0;
-    font-family: "Helvetica", sans-serif;
-
+    /* font-family: "Helvetica", sans-serif; */
+    font-family: 'Lato', sans-serif;
 }
 
 * {
