--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -4,7 +4,7 @@
     background: salmon;
     color: white;
     cursor: pointer;
-    transition: transform 200ms ease-in, opacity 200ms ease-in;
+    transition: transform 200ms ease-in-out, opacity 200ms ease-in;
     border-radius: 5px;
     font-size: 20px;
 }
@@ -12,4 +12,19 @@
 .item--over {
     transform: scale(0.9);
     opacity: 0.5;
+}
+
+.item--dropped {
+    animation: drop 200ms ease-in-out forwards;
+}
+
+@keyframes drop {
+    0% {
+        transform: scale(0.9);
+        opacity: 0.5;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
