Implement closing modal on modal-mask click

--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -20,7 +20,8 @@
 }
 
 .list__title {
-    background: slateblue;
+    /* background: slateblue; */
+    background-image: linear-gradient(0deg, #6078ff, #8660fe);  
     color: white;
     font-size: 30px;
     text-align: center;
