--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -7,6 +7,7 @@
     transition: transform 200ms ease-in-out, opacity 200ms ease-in;
     border-radius: 5px;
     font-size: 20px;
+    word-wrap: break-word;
 }
 
 .item--over {
