--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,6 +3,7 @@ html, body {
     margin: 0;
     /* font-family: "Helvetica", sans-serif; */
     font-family: 'Lato', sans-serif;
+    color: rgba(0,0,0,.84);
 }
 
 * {
