--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,6 +2,8 @@ header {
     /* background: slateblue; */
     background-image: linear-gradient(0deg, #6078ff, #8660fe);
     padding: 30px 0;
+    box-shadow: 0 5px 10px rgba(114, 119, 126, 0.329);
+    /* box-shadow: 0 1px 10px #6078ff; */
 }
 
 header i {
