--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -7,7 +7,7 @@
 
 .list-parent {
     border-radius: 5px;
-    box-shadow: 0 1px 10px rgba(114, 119, 126, 0.329);
+    box-shadow: 2px 1px 10px rgba(114, 119, 126, 0.329);
 }
 
 .list {
