--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,8 @@ header {
     background: #6078ff;
     /* background-image: linear-gradient(0deg, #6078ff, #8660fe); */
     padding: 30px 0;
-    box-shadow: 0 5px 10px rgba(114, 119, 126, 0.329);
+    box-shadow: 2px 5px 10px rgba(114, 119, 126, 0.329);
+    /* text-shadow: 2px 1px 10px rgba(0,0,0,0.25); */
 }
 
 header i {
