--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -4,7 +4,7 @@
     font-size: 30px;
     padding: 10px 5px; 
     width: 80%;
-    box-shadow: 0 2px 2px -2px #A5ADBA;
+    box-shadow: 0px 2px 2px -2px #A5ADBA;
 }
 
 .create-button {
@@ -13,7 +13,7 @@
     color: white;
     font-size: 20px;
     border: none;
-    box-shadow: 0 1px 2px #6078ff81;
+    box-shadow: 2px 1px 10px #6078ff81;
     border-radius: 5px;
 
 }
