--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -23,7 +23,7 @@
     height: 350px;
     padding: 30px;
     border-radius: 5px;
-    box-shadow: 0 1px 10px rgba(111, 111, 111, 0.6);
+    box-shadow: 2px 1px 10px rgba(111, 111, 111, 0.6);
     display: flex;
     flex-direction: column;
     align-items: center;
