--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,20 +1,20 @@
 .modal-mask {
-    opacity: 1;
+    opacity: 0;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.205);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-    transition: opacity 200ms ease-in-out;
-    animation: fade-in 300ms ease-in-out 1;
+    /* transition: opacity 200ms ease-in-out; */
+    /* animation: fade-in 300ms ease-in-out 1; */
 }
 
-.modal-mask--hide {
-    opacity: 0;
+.modal-mask--show {
+    opacity: 1;
 }
 
 .modal-content {
