Finalize modal fading

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -6,15 +6,11 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.205);
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     /* transition: opacity 200ms ease-in-out; */
     /* animation: fade-in 300ms ease-in-out 1; */
-}
-
-.modal-mask--show {
-    opacity: 1;
 }
 
 .modal-content {
