--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -7,7 +7,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.205);
     overflow-y: auto;
-    padding-top: 15%;
+    padding-top: 12%;
 }
 
 .modal-content {
@@ -19,7 +19,7 @@
     min-height: 350px;
     padding: 30px;
     border-radius: 5px;
-    box-shadow: 2px 1px 10px rgba(111, 111, 111, 0.6);
+    box-shadow: rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,9 +32,9 @@
 	min-height: 350px;
 	padding: 30px;
 	border-radius: 5px;
-	box-shadow: 2px 1px 10px rgba(111, 111, 111, 0.6);
 	margin: 0 auto;
-	margin-bottom: 30px;
+    margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.3);
 }
 
 /* .modal-content__info {
