--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -86,3 +86,10 @@
     padding: 5px;
     border-radius: 3px;
 }
+
+.comment-blank-state     {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 35px;
+    color: #A5ADBA;
+}
