--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -2,7 +2,7 @@
     margin-top: 20px;
     margin-left: 2px;
     padding-left: 7px;
-    animation: fadeIn 300ms ease-in-out 1;
+    /* animation: fadeIn 300ms ease-in-out 1; */
 }
 .comment__date-container {
     display: flex;
@@ -25,11 +25,11 @@
     font-size: 14px;    
 }
 
-@keyframes fadeIn {
+/* @keyframes fadeIn {
     0% {
         opacity: 0;
     }
     100% {
         opacity: 1;
     }
-}
+} */
