Make lists responsive [fix #18]

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 header {
     background: #6078ff;
     /* background-image: linear-gradient(0deg, #6078ff, #8660fe); */
-    padding: 30px 0;
+    padding: 30px 80px;
     box-shadow: 2px 5px 10px rgba(114, 119, 126, 0.329);
     /* text-shadow: 2px 1px 10px rgba(0,0,0,0.25); */
 }
@@ -11,7 +11,7 @@ header i {
     font-size: 40px;
 }
 
-header .container {
+header > div {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -35,4 +35,10 @@ header .container {
 
 .add-button {
     cursor: pointer;
+}
+
+@media (max-width: 1230px) {
+    header {
+        padding: 30px 30px;
+    }
 }
